some css required

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
+* {    
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
-  margin: 0px;
 }
 
 .App-header {
@@ -10,7 +14,4 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  margin: 0px;
 }
