--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -9,7 +9,7 @@
 }
 
 .container .Home {
-    font-size: 27px;
+    font-size: 2.0vh;
     float: left;
 }
 
@@ -18,5 +18,5 @@
     text-decoration: none;
     margin-right: 50px;
     margin-left: 50px;
-    font-size: 20px;
+    font-size: 1.8vh;
 }
