--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -19,8 +19,8 @@
     text-decoration: none;
     /* margin-right: 50px;
     margin-left: 50px; */
-    margin-left: 4em;
-    margin-right: 4em;
+    margin-left: 4rem;
+    margin-right: 4rem;
 }
 
 .container .Pages a:hover {
