--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     background-color: rgba(0.1, 0.1, 0.1, 0.3);
     color: antiquewhite;
     padding: 15px;
@@ -19,7 +20,9 @@
 }
 
 .hero h1 {
-    font-size: 8em;
+    font-size: 150px;
+    display: flex;
+    justify-content: center;
 }
 
 .hero h2 {
