--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  min-height: 10vh;
+  /* min-height: 10vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
