--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,16 @@
 .container {
     width: 100%;
     height:100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.container .Logo img{
+    width: 7vw;
+    margin-top: 15px;
+    margin-left: 30px;
+    border-radius: 20px;
 }
 
 .container .Pages {
@@ -9,12 +19,7 @@
     font-size: 2.0vh;
 }
 
-.container .Home {
-    font-size: 2.2vh;
-    float: left;
-}
-
-.container a{
+.container .Pages a{
     color: rgb(235, 234, 224);
     text-decoration: none;
     /* margin-right: 50px;
