--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,9 +8,12 @@
 
 .container .Logo img{
     width: 7vw;
-    margin-top: 15px;
-    margin-left: 30px;
+    min-width: 90px;
+    max-width: 120px;
+    margin-top: 30px;
+    margin-left: 80px;
     border-radius: 20px;
+    opacity: 0.7;
 }
 
 .container .Pages {
